[package]
name = "repro-env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
clap_complete = "4.3.1"
env_logger = "0.10"
flate2 = "1.0.26"
futures = "0.3.28"
log = "0.4.19"
memchr = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal"] }
toml = "0.7.5"
