[package]
name = "repro-env"
version = "0.3.2"
description = "Dependency lockfiles for reproducible build environments 📦🔒"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/repro-env"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ar = "0.9.0"
bytes = "1.4.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clone-file = "0.1.0"
data-encoding = "2.4.0"
dirs = "5.0.1"
env_logger = "0.10"
fd-lock = "4.0.0"
flate2 = "1.0.26"
hex = "0.4.3"
indexmap = { version = "2.1.0", features = ["serde"] }
log = "0.4.19"
lz4_flex = "0.11.1"
lzma-rs = "0.3.0"
memchr = "2.5.0"
nix = { version = "0.27", default-features = false, features = ["sched"] }
peekread = "0.1.1"
reqwest = { version = "0.11.18", features = ["rustls-tls-native-roots", "tokio-socks", "stream"], default-features = false }
ruzstd = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.5"
sha2 = "0.10.7"
tar = "0.4.38"
tempfile = "3.6.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal"] }
toml = "0.8"
urlencoding = "2.1.2"
